tests/number/decimal_point_at_eof.out
[31merror[error]: Expect property name after '.'.
----- Traceback -----
  ┌─ <unknown>:1:4
  | 
1 | 123.
  |     ^
[0m